src/infra/raspi/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: menu-maker-api-service
  namespace: menu-maker-dev
spec:
  type: ClusterIP
  selector:
    app: menu-maker-api
  ports:
    - name: api-http
      protocol: TCP
      port: 8090
      targetPort: 80
    - name: api-https
      protocol: TCP
      port: 8091
      targetPort: 443


# kind: Ingress
# apiVersion: networking.k8s.io/v1
# metadata:
#   name: dummy-api-ingress
#   namespace: default
#   uid: 347285f1-d716-4b6f-8cc0-d4e36f323de5
#   resourceVersion: '2716351'
#   generation: 12
#   creationTimestamp: '2023-09-02T13:08:14Z'
#   annotations:
#     ingress.kubernetes.io/ssl-redirect: 'false'
#   managedFields:
#     - manager: kubectl-client-side-apply
#       operation: Update
#       apiVersion: networking.k8s.io/v1
#       time: '2023-09-02T13:08:14Z'
#       fieldsType: FieldsV1
#       fieldsV1:
#         f:metadata:
#           f:annotations: {}
#     - manager: dashboard
#       operation: Update
#       apiVersion: networking.k8s.io/v1
#       time: '2023-10-01T10:53:48Z'
#       fieldsType: FieldsV1
#       fieldsV1:
#         f:metadata:
#           f:annotations:
#             f:ingress.kubernetes.io/ssl-redirect: {}
#         f:spec:
#           f:ingressClassName: {}
#           f:rules: {}
# spec:
#   ingressClassName: traefik
#   rules:
#     - http:
#         paths:
#           - path: /weatherforecast
#             pathType: Prefix
#             backend:
#               service:
#                 name: dummy-api-service
#                 port:
#                   number: 8010
# status:
#   loadBalancer: {}
